src/objects/GBL_WF_Catalogo_Canal__c.object
<CustomObject>
    <description>Objeto para la aplicación Workflow que permite almacenar los tipos de canal con sus canales relacionados y los productos con sus subproductos relacionados</description>
    <fields>
        <fullName>GBL_WF_Canal__c</fullName>
        <description>Campo para la aplicación WF muestra el nombre del canal</description>
        <label>Canal</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GBL_WF_Producto__c</fullName>
        <description>Campo para la aplicación WF muestra el nombre del Producto</description>
        <label>Producto</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GBL_WF_Subproducto__c</fullName>
        <description>Campo para la aplicación WF muestra el nombre del subproducto</description>
        <label>Subproducto</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GBL_WF_Tipo_de_Canal__c</fullName>
        <description>Campo para la aplicación WF muestra el nombre del tipo de canal</description>
        <label>Tipo de Canal</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_WF_Vigente__c</fullName>
        <description>Muestra si el canal o el producto se encuentran vigentes</description>
        <label>Vigente</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sí</fullName>
                    <default>true</default>
                    <label>Sí</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Catálogo Canal</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>GBL_WF_Producto__c</columns>
        <columns>GBL_WF_Subproducto__c</columns>
        <columns>GBL_WF_Tipo_de_Canal__c</columns>
        <columns>GBL_WF_Canal__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>GBL_WF_Catalogo_Canal__c.GBL_WF_Producto_Subproducto,GBL_WF_Catalogo_Canal__c.GBL_WF_Tipo_de_Canal_Canal</value>
        </filters>
        <label>Todos</label>
    </listViews>
    <nameField>
        <label>Nombre de Canal o Producto</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Catálogo Canales</pluralLabel>
    <recordTypes>
        <fullName>GBL_WF_Producto_Subproducto</fullName>
        <active>true</active>
        <label>Producto - Subproducto</label>
    </recordTypes>
    <recordTypes>
        <fullName>GBL_WF_Tipo_de_Canal_Canal</fullName>
        <active>true</active>
        <label>Tipo de Canal - Canal</label>
    </recordTypes>
    <recordTypes>
        <fullName>MX_WF_Application_Name</fullName>
        <active>true</active>
        <label>Application Name</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>